Добавить comments (endpoint)
